# multi_agent_researcher

./: .gitignore  README.md  config.py  ingest.py  main.py  pyproject.toml  retriever.py  schemas.py  supervisor.py  tools.py
agents/: critic.py  planner.py  research.py
output/: Mazda_CX-5_2nd_vs_3rd_Edition_Comparison.md  Mazda_CX-5_2nd_vs_3rd_Generation_Deep_Analysis.md  Mazda_CX-5_Full_Length_Report.md  output.md
