[project]
name = "multi-agent-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.21.1",
    "ddgs>=9.12.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "trafilatura>=2.0.0",
]
